[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sam_loss"
version = "0.0.3"
description = "Implementation of the SAM model as perceptual loss from the PercHead paper"
authors = [
    { name = "Tobias Kirschstein", email = "tobias.kirschstein@gmail.com" },
]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
# urls = { Documentation = "<<<ENTER_LINK_TO_DOCUMENTATION>>>" }
# Main dependencies
dependencies = [
    'hydra-core',
    'omegaconf',
    'iopath'
]

[project.optional-dependencies]
# Development packages, install via <<<PROJECT_NAME>>>[dev]
dev = [
]

[project.scripts]
# E.g., ns-download-data = "scripts.downloads.download_data:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sam_loss*"]  # Keep the '*', otherwise submodules are not found

[tool.setuptools.package-data]
sam_loss = ["**/*.yaml"]  # Include SAM2 config files which are required for loading pre-trained models
